feat(sale): Add product description to SaleItemResponse
- Add description field to SaleItemResponse
- Update from() factory method with description parameter
- Add null-safe product description retrieval in service
- Update Builder class for description field